syntax = "proto3";

package template_proto;

service Template {
  rpc Render(RenderTemplateRequest) returns (RenderTemplateResponse);
  /* rpc ReadRepo(ReadRepoRequest) returns (ReadRepoResponse); */
  /* rpc UpdateRepo(UpdateRepoRequest) returns (UpdateRepoResponse); */
  /* rpc DeleteRepo(DeleteRepoRequest) returns (DeleteRepoResponse); */
}

message RenderTemplateRequest {
  string input = 1;
  string context = 2;
}

message RenderTemplateResponse {
  enum Result {
    SUCCESS = 0;
    FAILURE = 1;
  }

  Result result = 1;
  RenderResponse render = 2;
}

/* message ReadRepoRequest { */
/*   string id = 1; */
/* } */

/* message ReadRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/*   RepoResponse render = 2; */
/* } */

/* message UpdateRepoRequest { */
/*   string id = 1; */
/*   string user_id = 2; */
/*   string name = 3; */
/*   string description = 4; */
/* } */

/* message UpdateRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/* } */

/* message DeleteRepoRequest { */
/*   string id = 1; */
/* } */

/* message DeleteRepoResponse { */
/*   enum Result { */
/*     SUCCESS = 0; */
/*     FAILURE = 1; */
/*   } */

/*   Result result = 1; */
/* } */

message RenderResponse {
  string output = 3;
}

